--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               <img class="profile-pic" src="images/dwaipayan.png" alt="dwaipayan-pic">
               <div class="a-t">
                 <li>
-                  Studies BSc Statistics Honours at Asutosh College.
+                  Studies BSc Statistics Honours at St. Xavier's College.
                 </li>
                 <li>
                   Cracked Pre-Regional Mathematics Olympiad (2019).
