--- a/index.html
+++ b/index.html
@@ -123,10 +123,7 @@
                 <p class="obj-body">We teach the youth to understand the fundamentals via internet resources.</p>
               </li>
               <li>
-                <p class="obj-body">We prepare our students for board exams as well as Olympiads.</p>
-              </li>
-              <li>
-                <p class="obj-body">We will build a foundation for JEE, NEET, BIT-SAT and all other important examinations.</p>
+                <p class="obj-body">We believe in building a solid foundation for all the vital examinations across the globe.</p>
               </li>
             </ul>
           </div>
@@ -140,10 +137,10 @@
           <div class="custom-b card-body">
             <ul>
               <li>
-                <p class="obj-body">We want to provide quality education to the students of West Bengal.</p>
+                <p class="obj-body">We want to build a nation with productive personnels having knowledge, wisdom and integrity.</p>
               </li>
               <li>
-                <p class="obj-body">We want to impart quality education at the lowest possible rates.</p>
+                <p class="obj-body">We want to impart quality education to achieve our mission at reasonable rates.</p>
               </li>
             </ul>
           </div>
@@ -163,7 +160,10 @@
                 <p class="obj-body">We teach Mathematics to students of class VIII, IX, X under Secondary Mathematics department.</p>
               </li>
               <li>
-                <p class="obj-body">We teach Physical Sciences (Physics, Chemistry, Astronomy) to students of class VIII, IX, X under Secondary Physical Science department</p>
+                <p class="obj-body">We teach Physical Sciences (Physics, Chemistry, Astronomy) to students of class VIII, IX, X under Secondary Physical Science department.</p>
+              </li>
+              <li>
+                <p class="obj-body">More courses on the way.</p>
               </li>
             </ul>
           </div>
@@ -178,7 +178,8 @@
     <div class="animated-about wow animate__lightSpeedInLeft">
       <p>We, at Chrysopoeia Classes, have been noticing that the questioning ability of students these days have decreased quite a bit as they are not taught the concepts properly. We have decided to teach the students of class (V-X) the concepts of
         Mathematics and the students of class (VIII-X) the concepts of Physical Sciences (Physics, Chemistry and Astronomy) with stress.</p>
-      <p>We believe that understanding concepts thoroughly is the pillar of success. If you have the same belief, then, contact us.</p>
+      <p class="belief">We believe that understanding concepts thoroughly is the pillar of success.</p>
+      <p>If you have the same belief, then, contact us.</p>
       <div class="departments">
         <p class="department-p">
           There are three departments in our Chrysopoeia Classes:
@@ -215,7 +216,7 @@
             <div class="carousel-item active">
               <div class="teacher-name">
                 <h2><strong>Dwaipayan Haldar</strong></h2>
-                <h3><strong>Secondary Mathematics Teacher</strong></h3>
+                <h3><strong>Secondary Mathematics Department</strong></h3>
               </div>
               <img class="profile-pic" src="images/dwaipayan.png" alt="dwaipayan-pic">
               <div class="a-t">
@@ -242,7 +243,7 @@
             <div class="carousel-item">
               <div class="teacher-name">
                 <h2><strong>Saptarshi Bhaduri</strong></h2>
-                <h3><strong>Secondary Physical Science Teacher</strong></h3>
+                <h3><strong>Secondary Physical Science Department</strong></h3>
               </div>
               <img class="profile-pic" src="images/saptarshi.png" alt="saptarshi-pic">
               <div class="a-t">
@@ -269,7 +270,7 @@
             <div class="carousel-item">
               <div class="teacher-name">
                 <h2><strong>Shrijit Panda</strong></h2>
-                <h3><strong>Junior Mathematics Teacher</strong></h3>
+                <h3><strong>Junior Mathematics Department</strong></h3>
               </div>
               <img class="profile-pic" src="images/shrijit.png" alt="shrijit-pic">
               <div class="a-t">
