--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <div class="animated-about wow animate__lightSpeedInLeft">
       <p>We, at Chrysopoeia Classes, have been noticing that the questioning ability of students these days have decreased quite a bit as they are not taught the concepts properly. We have decided to teach the students of class (V-X) the concepts of
         Mathematics and the students of class (VIII-X) the concepts of Physical Sciences (Physics, Chemistry and Astronomy) with stress.</p>
-      <p class="belief">We believe that understanding concepts thoroughly is the pillar of success.</p>
+      <p class="belief">We believe that understanding concepts thoroughly is the pillar of success. And we want to build that pillar. And we want to build that nation.</p>
       <p>If you have the same belief, then, contact us.</p>
       <div class="departments">
         <p class="department-p">
