--- a/index.html
+++ b/index.html
@@ -226,6 +226,12 @@
                 <li>
                   Cracked Pre-Regional Mathematics Olympiad (2019).
                 </li>
+                <li>
+                  Cracked JEE Mains (2021).
+                </li>
+                <li>
+                  Cracked Jadavpur University through WBJEE (2021).
+                </li>
               </div>
             </div>
             <div class="carousel-item">
@@ -237,6 +243,9 @@
               <div class="a-t">
                 <li>
                   Studies BSc Physics Honours at Serampore College.
+                </li>
+                <li>
+                  Cracked JEE Mains (2021).
                 </li>
                 <li>
                   Runs a Physics YouTube channel named <a href="https://www.youtube.com/channel/UCk6E_of7GIRI6nntBsARbFA">Cosmos Unveiled</a>.
