--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@
                 <li>
                   Studies BSc Statistics Honours at St. Xavier's College.
                 </li>
+                <li class="orator">
+                  Great orator.
+                </li>
                 <li>
                   Cracked Pre-Regional Mathematics Olympiad (2019).
                 </li>
@@ -244,6 +247,9 @@
                 <li>
                   Studies BSc Physics Honours at Serampore College.
                 </li>
+                <li class="orator">
+                  Great orator.
+                </li>
                 <li>
                   Cracked JEE Mains (2021).
                 </li>
@@ -264,6 +270,9 @@
               <div class="a-t">
                 <li>
                   Studies BSc Statistics Honours at Asutosh College.
+                </li>
+                <li class="orator">
+                  Great orator.
                 </li>
                 <li>
                   Cracked Pre-Regional Mathematics Olympiad (2019).
