--- a/admission.html
+++ b/admission.html
@@ -40,7 +40,7 @@
 
   <div class="first-container">
     <h1>Admissions for 2022</h1>
-    <h3>Sessions for batch of 2022 starting on December 2021.</h3>
+    <h3 class="session">Sessions for batch of 2022 starting on December 2021.</h3>
     <table>
       <thead>
         <tr>
@@ -99,7 +99,7 @@
     </table>
 
     <h3 class="admission-note">Note: Exams will be conducted only for admission into Junior Mathematics Department. For Secondary Mathematics and Physical Sciences Department, interview will be conducted.</h3>
-    <h3>It is not mandatory to join all the departments. A student can join any department freely as per his/her needs.</h3>
+    <h3 class="admission-note">It is not mandatory to join all the departments. A student can join any department freely as per his/her needs.</h3>
     <table>
       <thead>
         <tr>
