--- a/admission.html
+++ b/admission.html
@@ -41,7 +41,7 @@
   <div class="first-container">
     <h1>Admissions for 2022</h1>
     <h3 class="session">Sessions for batch of 2022 starting on December 2021.</h3>
-    <h3>Register now.↓▽</h3>
+    <h3>Register now.▼</h3>
     <table>
       <thead>
         <tr>
