--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                   Studies BSc Statistics Honours at St. Xavier's College.
                 </li>
                 <li>
-                  Great orator.
+                  Proficient orator.
                 </li>
                 <li>
                   Cracked Pre-Regional Mathematics Olympiad (2019).
@@ -248,7 +248,7 @@
                   Studies BSc Physics Honours at Serampore College.
                 </li>
                 <li>
-                  Great orator.
+                  Proficient orator.
                 </li>
                 <li>
                   Cracked JEE Mains (2021).
@@ -272,7 +272,7 @@
                   Studies BSc Statistics Honours at Asutosh College.
                 </li>
                 <li>
-                  Great orator.
+                  Proficient orator.
                 </li>
                 <li>
                   Cracked Pre-Regional Mathematics Olympiad (2019).
