--- a/admission.html
+++ b/admission.html
@@ -101,6 +101,7 @@
 
     <h3 class="admission-note">Note: Exams will be conducted only for admission into Junior Mathematics Department. For Secondary Mathematics and Physical Sciences Department, interview will be conducted.</h3>
     <h3 class="admission-note">It is not mandatory to join all the departments. A student can join any department freely as per his/her needs.</h3>
+    <h3 class="admission-note">In the interview, we will check the students character, curiosity and concepts in order.</h3>
     <table>
       <thead>
         <tr>
