--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
                 </div>
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="doubts.html">
+                <div class="doubts-button">
+                  <h6>Academic Doubts <i class="far fa-lightbulb fa-lg"></i></h6>
+                </div>
+              </a>
+            </li>
           </ul>
         </div>
       </nav>
