doubts section changed

--- a/doubts.html
+++ b/doubts.html
@@ -36,11 +36,55 @@
   </head>
   <body>
 
+    <section id="title">
+      <div class="title-div container-fluid">
+
+        <!-- Nav Bar -->
+
+        <nav class="custom navbar navbar-expand-lg navbar-light fixed-top">
+          <a href="index.html"><img class="logo-img" src="images/logo.png" alt="logo-img"></a>
+          <a class="name-link" href="index.html"><h1 class="name">Chrysopoeia Classes</h1></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="menu-bar collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">
+                  <div class="home-button">
+                    <h6>Home <i class="fas fa-home fa-lg"></i></h6>
+                  </div>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="admission.html">
+                  <div class="admission-button">
+                    <h6>Admissions <i class="fas fa-graduation-cap fa-lg"></i></h6>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </section>
+
     <div class="first-container">
-      <h1>Ask Your Doubts</h1>
+      <h1 class="doubt-heading">Ask Your Doubts</h1>
+
+      <div class="faq">
+        <h2>What to ask?</h2>
+        <h3>You can ask any academic doubts related to the mentioned subjects. It can be of any class from V to XII.</h3>
+      </div>
+
       <div class="faq">
         <h2>How to ask your doubts?</h2>
         <h3>The links given in table below will redirect you to the corresponding Google form. There you can write your doubts or upload any picture or pdf of your academic doubts.</h3>
+      </div>
+
+      <div class="faq">
+        <h2>How will we answer?</h2>
+        <h3>In the Google form you have to enter your email. And within 24 hours after your doubt has been submitted, we will email you the answer. We will try to answer in a lucid language with clear explanation.</h3>
       </div>
 
       <table>
@@ -54,47 +98,32 @@
         <tbody>
           <tr>
             <td>1</td>
-            <td>Class V Mathematics</td>
+            <td>Mathematics</td>
             <td><a href="#">Ask Your Doubts</a></td>
           </tr>
           <tr>
             <td>2</td>
-            <td>Class VI Mathematics</td>
+            <td>Physics</td>
             <td><a href="#">Ask Your Doubts</a></td>
           </tr>
           <tr>
             <td>3</td>
-            <td>Class VII Mathematics</td>
+            <td>Chemistry</td>
             <td><a href="#">Ask Your Doubts</a></td>
           </tr>
           <tr>
             <td>4</td>
-            <td>Class VIII Mathematics</td>
+            <td>Biology</td>
             <td><a href="#">Ask Your Doubts</a></td>
           </tr>
           <tr>
             <td>5</td>
-            <td>Class IX Mathematics</td>
+            <td>Statistics</td>
             <td><a href="#">Ask Your Doubts</a></td>
           </tr>
           <tr>
             <td>6</td>
-            <td>Class X Mathematics</td>
-            <td><a href="#">Ask Your Doubts</a></td>
-          </tr>
-          <tr>
-            <td>7</td>
-            <td>Class VIII Physical Sciences</td>
-            <td><a href="#">Ask Your Doubts</a></td>
-          </tr>
-          <tr>
-            <td>8</td>
-            <td>Class IX Physical Sciences</td>
-            <td><a href="#">Ask Your Doubts</a></td>
-          </tr>
-          <tr>
-            <td>9</td>
-            <td>Class X Physical Sciences</td>
+            <td>Computer Science</td>
             <td><a href="#">Ask Your Doubts</a></td>
           </tr>
         </tbody>
