--- a/admission.html
+++ b/admission.html
@@ -39,7 +39,41 @@
 <body>
 
   <div class="first-container">
-    <h1>Admissions for 2022</h1>
+
+    <section id="title">
+      <div class="title-div container-fluid">
+
+        <!-- Nav Bar -->
+
+        <nav class="custom navbar navbar-expand-lg navbar-light fixed-top">
+          <a href="index.html"><img class="logo-img" src="images/logo.png" alt="logo-img"></a>
+          <a class="name-link" href="index.html"><h1 class="name">Chrysopoeia Classes</h1></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="menu-bar collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">
+                  <div class="home-button">
+                    <h6>Home <i class="fas fa-home fa-lg"></i></h6>
+                  </div>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="doubts.html">
+                  <div class="doubts-button">
+                    <h6>Academic Doubts <i class="far fa-lightbulb fa-lg"></i></h6>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </section>
+
+    <h1 class="admission-head">Admissions for 2022</h1>
     <h3 class="session">Sessions for batch of 2022 starting on December 2021.</h3>
     <h3 class="registration">Register now</h3>
     <table>
