--- a/doubts.html
+++ b/doubts.html
@@ -99,32 +99,32 @@
           <tr>
             <td>1</td>
             <td>Mathematics</td>
-            <td><a href="#">Ask Your Doubts</a></td>
+            <td><a href="https://forms.gle/9os7QnkofkwpCVpYA">Ask Your Doubts</a></td>
           </tr>
           <tr>
             <td>2</td>
             <td>Physics</td>
-            <td><a href="#">Ask Your Doubts</a></td>
+            <td><a href="https://forms.gle/ptfGKkuuKn5Nr6UL7">Ask Your Doubts</a></td>
           </tr>
           <tr>
             <td>3</td>
             <td>Chemistry</td>
-            <td><a href="#">Ask Your Doubts</a></td>
+            <td><a href="https://forms.gle/Qr43yszBJaFH4WdX7">Ask Your Doubts</a></td>
           </tr>
           <tr>
             <td>4</td>
             <td>Biology</td>
-            <td><a href="#">Ask Your Doubts</a></td>
+            <td><a href="https://forms.gle/ySktCjdGjqg9BxNa7">Ask Your Doubts</a></td>
           </tr>
           <tr>
             <td>5</td>
             <td>Statistics</td>
-            <td><a href="#">Ask Your Doubts</a></td>
+            <td><a href="https://forms.gle/HUwuZCW5EW4f5PDJ6">Ask Your Doubts</a></td>
           </tr>
           <tr>
             <td>6</td>
             <td>Computer Science</td>
-            <td><a href="#">Ask Your Doubts</a></td>
+            <td><a href="https://forms.gle/fQBR1kL6kWSfjRr6A">Ask Your Doubts</a></td>
           </tr>
         </tbody>
       </table>
