--- a/index.html
+++ b/index.html
@@ -41,143 +41,136 @@
 
 <body>
 
-  <section id="title">
-    <div class="title-div container-fluid">
 
-      <!-- Nav Bar -->
 
-      <nav class="custom navbar navbar-expand-lg navbar-light fixed-top">
-        <img class="logo-img" src="images/logo.png" alt="logo-img">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="menu-bar collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#home">
-                <div class="home-button">
-                  <h6>Home <i class="fas fa-home fa-lg"></i></h6>
-                </div>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">
-                <div class="about-button">
-                  <h6>About <i class="fas fa-pencil-alt fa-lg"></i></h6>
-                </div>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#teachers">
-                <div class="teacher-button">
-                  <h6>Teachers <i class="fas fa-graduation-cap fa-lg"></i></h6>
-                </div>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#courses-offered">
-                <div class="courses-button">
-                  <h6>Courses <i class="fas fa-book fa-lg"></i></h6>
-                </div>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">
-                <div class="contact-button">
-                  <h6>Contact Us <i class="fas fa-phone fa-lg"></i></h6>
-                </div>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="admission.html">
-                <div class="admission-button">
-                  <h6>Admissions <i class="fas fa-graduation-cap fa-lg"></i></h6>
-                </div>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="doubts.html">
-                <div class="doubts-button">
-                  <h6>Academic Doubts <i class="far fa-lightbulb fa-lg"></i></h6>
-                </div>
-              </a>
-            </li>
-          </ul>
+  <div class="new-container">
+    <div class="navbar">
+      <div class="menu">
+        <img class="logo-img" src="images/logo.png" alt="logo-pic">
+        <div class="hamburger-menu">
+          <div class="bar"></div>
         </div>
-      </nav>
+      </div>
     </div>
-  </section>
-
-
-
-
-  <div class="first-container" id="home">
-    <h1 class="name">Chrysopoeia Classes</h1>
-
-
-    <div class="row">
-      <div class="col-lg-4 col-md-12">
-        <div class="custom-c card">
-          <div class="card-header">
-            <h3>Why We?</h3>
+    <div class="main-container">
+      <div class="main">
+          <div class="overlay">
+            <div class="inner">
+              <h1 class="title">Chrysopoeia Classes</h1>
+              <div class="row">
+                <div class="col-lg-4 col-md-12">
+                  <div class="custom-c card">
+                    <div class="card-header">
+                      <h3>Why We?</h3>
+                    </div>
+                    <div class="custom-b card-body">
+                      <ul>
+                        <li>
+                          <p class="obj-body">We believe understanding the fundamentals is the building block of success.</p>
+                        </li>
+                        <li>
+                          <p class="obj-body">We teach the youth to understand the fundamentals via internet resources.</p>
+                        </li>
+                        <li>
+                          <p class="obj-body">We believe in building a solid foundation for all the vital examinations across the globe.</p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-12">
+                  <div class="custom-c card">
+                    <div class="card-header">
+                      <h3>Our Objective</h3>
+                    </div>
+                    <div class="custom-b card-body">
+                      <ul>
+                        <li>
+                          <p class="obj-body">We want to build a nation with productive personnels having knowledge, wisdom and integrity.</p>
+                        </li>
+                        <li>
+                          <p class="obj-body">We want to impart quality education to achieve our mission at reasonable rates.</p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-12">
+                  <div class="custom-c card">
+                    <div class="card-header">
+                      <h3>Courses Offered</h3>
+                    </div>
+                    <div class="custom-b card-body">
+                      <ul>
+                        <li>
+                          <p class="obj-body">We teach Mathematics to students of class V, VI, VII under Junior Mathematics department.</p>
+                        </li>
+                        <li>
+                          <p class="obj-body">We teach Mathematics to students of class VIII, IX, X under Secondary Mathematics department.</p>
+                        </li>
+                        <li>
+                          <p class="obj-body">We teach Physical Sciences (Physics, Chemistry, Astronomy) to students of class VIII, IX, X under Secondary Physical Science department.</p>
+                        </li>
+                        <li>
+                          <p class="obj-body">More courses on the way.</p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="custom-b card-body">
-            <ul>
-              <li>
-                <p class="obj-body">We believe understanding the fundamentals is the building block of success.</p>
-              </li>
-              <li>
-                <p class="obj-body">We teach the youth to understand the fundamentals via internet resources.</p>
-              </li>
-              <li>
-                <p class="obj-body">We believe in building a solid foundation for all the vital examinations across the globe.</p>
-              </li>
-            </ul>
-          </div>
-        </div>
       </div>
-      <div class="col-lg-4 col-md-12">
-        <div class="custom-c card">
-          <div class="card-header">
-            <h3>Our Objective</h3>
-          </div>
-          <div class="custom-b card-body">
-            <ul>
-              <li>
-                <p class="obj-body">We want to build a nation with productive personnels having knowledge, wisdom and integrity.</p>
-              </li>
-              <li>
-                <p class="obj-body">We want to impart quality education to achieve our mission at reasonable rates.</p>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-12">
-        <div class="custom-c card">
-          <div class="card-header">
-            <h3>Courses Offered</h3>
-          </div>
-          <div class="custom-b card-body">
-            <ul>
-              <li>
-                <p class="obj-body">We teach Mathematics to students of class V, VI, VII under Junior Mathematics department.</p>
-              </li>
-              <li>
-                <p class="obj-body">We teach Mathematics to students of class VIII, IX, X under Secondary Mathematics department.</p>
-              </li>
-              <li>
-                <p class="obj-body">We teach Physical Sciences (Physics, Chemistry, Astronomy) to students of class VIII, IX, X under Secondary Physical Science department.</p>
-              </li>
-              <li>
-                <p class="obj-body">More courses on the way.</p>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
+    </div>
+    <div class="links">
+      <ul>
+        <li>
+          <a href="#about">
+            <div class="about-button">
+              <h6>About <i class="fas fa-pencil-alt fa-lg"></i></h6>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#teachers">
+            <div class="teacher-button">
+              <h6>Teachers <i class="fas fa-graduation-cap fa-lg"></i></h6>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#courses-offered">
+            <div class="courses-button">
+              <h6>Courses <i class="fas fa-book fa-lg"></i></h6>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#contact">
+            <div class="contact-button">
+              <h6>Contact Us <i class="fas fa-phone fa-lg"></i></h6>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="admission.html">
+            <div class="admission-button">
+              <h6>Admissions <i class="fas fa-graduation-cap fa-lg"></i></h6>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="doubts.html">
+            <div class="doubts-button">
+              <h6>Academic Doubts <i class="far fa-lightbulb fa-lg"></i></h6>
+            </div>
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
+
 
   <div class="second-container" id="about">
     <h1>About Us</h1>
