--- a/index.html
+++ b/index.html
@@ -230,6 +230,9 @@
                   Cracked Pre-Regional Mathematics Olympiad (2019).
                 </li>
                 <li>
+                  Cracked SUM-IT (2020) conducted by ISI.
+                </li>
+                <li>
                   Cracked JEE Mains (2021).
                 </li>
                 <li>
