--- a/doubts.html
+++ b/doubts.html
@@ -86,32 +86,32 @@
           <tr>
             <td>1</td>
             <td>Mathematics</td>
-            <td><a href="https://forms.gle/9os7QnkofkwpCVpYA">Ask Your Doubts</a></td>
+            <td><a href="https://forms.gle/XDsnsDe6CUGdyKzS8">Ask Your Doubts</a></td>
           </tr>
           <tr>
             <td>2</td>
             <td>Physics</td>
-            <td><a href="https://forms.gle/ptfGKkuuKn5Nr6UL7">Ask Your Doubts</a></td>
+            <td><a href="https://forms.gle/3S1WhdMWnwJt7YGx7">Ask Your Doubts</a></td>
           </tr>
           <tr>
             <td>3</td>
             <td>Chemistry</td>
-            <td><a href="https://forms.gle/Qr43yszBJaFH4WdX7">Ask Your Doubts</a></td>
+            <td><a href="https://forms.gle/tW8uxrNGm7Q7bN9P6">Ask Your Doubts</a></td>
           </tr>
           <tr>
             <td>4</td>
             <td>Biology</td>
-            <td><a href="https://forms.gle/ySktCjdGjqg9BxNa7">Ask Your Doubts</a></td>
+            <td><a href="https://forms.gle/ZmpB8AsyoKGXFTSZ7">Ask Your Doubts</a></td>
           </tr>
           <tr>
             <td>5</td>
             <td>Statistics</td>
-            <td><a href="https://forms.gle/HUwuZCW5EW4f5PDJ6">Ask Your Doubts</a></td>
+            <td><a href="https://forms.gle/qiCgFDT7FFY933DV7">Ask Your Doubts</a></td>
           </tr>
           <tr>
             <td>6</td>
             <td>Computer Science</td>
-            <td><a href="https://forms.gle/fQBR1kL6kWSfjRr6A">Ask Your Doubts</a></td>
+            <td><a href="https://forms.gle/A5TNjmpUGvLcWBkz5">Ask Your Doubts</a></td>
           </tr>
         </tbody>
       </table>
