--- a/index.html
+++ b/index.html
@@ -54,73 +54,73 @@
     </div>
     <div class="main-container">
       <div class="main">
-          <div class="overlay">
-            <div class="inner">
-              <h1 class="title">Chrysopoeia Classes</h1>
-              <div class="row">
-                <div class="col-lg-4 col-md-12">
-                  <div class="custom-c card">
-                    <div class="card-header">
-                      <h3>Why We?</h3>
-                    </div>
-                    <div class="custom-b card-body">
-                      <ul>
-                        <li>
-                          <p class="obj-body">We believe understanding the fundamentals is the building block of success.</p>
-                        </li>
-                        <li>
-                          <p class="obj-body">We teach the youth to understand the fundamentals via internet resources.</p>
-                        </li>
-                        <li>
-                          <p class="obj-body">We believe in building a solid foundation for all the vital examinations across the globe.</p>
-                        </li>
-                      </ul>
-                    </div>
+        <div class="overlay">
+          <div class="inner">
+            <h1 class="title">Chrysopoeia Classes</h1>
+            <div class="row">
+              <div class="col-lg-4 col-md-12">
+                <div class="custom-c card">
+                  <div class="card-header">
+                    <h3>Why We?</h3>
+                  </div>
+                  <div class="custom-b card-body">
+                    <ul>
+                      <li>
+                        <p class="obj-body">We believe understanding the fundamentals is the building block of success.</p>
+                      </li>
+                      <li>
+                        <p class="obj-body">We teach the youth to understand the fundamentals via internet resources.</p>
+                      </li>
+                      <li>
+                        <p class="obj-body">We believe in building a solid foundation for all the vital examinations across the globe.</p>
+                      </li>
+                    </ul>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-12">
-                  <div class="custom-c card">
-                    <div class="card-header">
-                      <h3>Our Objective</h3>
-                    </div>
-                    <div class="custom-b card-body">
-                      <ul>
-                        <li>
-                          <p class="obj-body">We want to build a nation with productive personnels having knowledge, wisdom and integrity.</p>
-                        </li>
-                        <li>
-                          <p class="obj-body">We want to impart quality education to achieve our mission at reasonable rates.</p>
-                        </li>
-                      </ul>
-                    </div>
+              </div>
+              <div class="col-lg-4 col-md-12">
+                <div class="custom-c card">
+                  <div class="card-header">
+                    <h3>Our Objective</h3>
+                  </div>
+                  <div class="custom-b card-body">
+                    <ul>
+                      <li>
+                        <p class="obj-body">We want to build a nation with productive personnels having knowledge, wisdom and integrity.</p>
+                      </li>
+                      <li>
+                        <p class="obj-body">We want to impart quality education to achieve our mission at reasonable rates.</p>
+                      </li>
+                    </ul>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-12">
-                  <div class="custom-c card">
-                    <div class="card-header">
-                      <h3>Courses Offered</h3>
-                    </div>
-                    <div class="custom-b card-body">
-                      <ul>
-                        <li>
-                          <p class="obj-body">We teach Mathematics to students of class V, VI, VII under Junior Mathematics department.</p>
-                        </li>
-                        <li>
-                          <p class="obj-body">We teach Mathematics to students of class VIII, IX, X under Secondary Mathematics department.</p>
-                        </li>
-                        <li>
-                          <p class="obj-body">We teach Physical Sciences (Physics, Chemistry, Astronomy) to students of class VIII, IX, X under Secondary Physical Science department.</p>
-                        </li>
-                        <li>
-                          <p class="obj-body">More courses on the way.</p>
-                        </li>
-                      </ul>
-                    </div>
+              </div>
+              <div class="col-lg-4 col-md-12">
+                <div class="custom-c card">
+                  <div class="card-header">
+                    <h3>Courses Offered</h3>
+                  </div>
+                  <div class="custom-b card-body">
+                    <ul>
+                      <li>
+                        <p class="obj-body">We teach Mathematics to students of class V, VI, VII under Junior Mathematics department.</p>
+                      </li>
+                      <li>
+                        <p class="obj-body">We teach Mathematics to students of class VIII, IX, X under Secondary Mathematics department.</p>
+                      </li>
+                      <li>
+                        <p class="obj-body">We teach Physical Sciences (Physics, Chemistry, Astronomy) to students of class VIII, IX, X under Secondary Physical Science department.</p>
+                      </li>
+                      <li>
+                        <p class="obj-body">More courses on the way.</p>
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+        </div>
       </div>
     </div>
     <div class="links">
@@ -182,7 +182,7 @@
       <p>If you have the same belief, then, contact us.</p>
       <div class="departments">
         <p class="department-p">
-          There are three departments in our Chrysopoeia Classes:
+          There are three departments in our Chrysopoeia Classes:-
         </p>
         <ul class="departments-list">
           <li>
@@ -199,6 +199,35 @@
       <p>We have the vision of preparing the students not only for their classes but also building a foundation for class XI and XII.</p>
       <p>We will be teaching via online live lectures and providing internet resources (like PDFs).</p>
       <p>Chrysopoeia Classes promises to provide conceptual backing to students of classes (V-X) at a reasonable price.</p>
+      <p>And remember that your intelligence cannot be measured by a number. It is defined by your willingness to learn, solve problems and try new things. You are more than just a number. Develop your skills. Share your brilliant ideas. Your skills
+        are more valuable than your grades.</p>
+      <div class="intelligence-div">
+        <p>
+          Some basic steps you can take to develop intelligence:-
+        </p>
+        <ul class="intelligence">
+          <li>
+            Question your beliefs.
+          </li>
+          <li>
+            Listen to intellectual people.
+          </li>
+          <li>
+            Have new experiences.
+          </li>
+          <li>
+            Discuss your ideas with people from different backgrounds to gain more perspective.
+          </li>
+        </ul>
+      </div>
+      <div class="quote">
+        <img src="images/einstein.png" alt="einstein-pic">
+        <p>"Imagination is more important than knowledge."</p>
+      </div>
+      <div class="quote">
+        <img src="images/feynman.png" alt="feynman-pic">
+        <p>"Nobody ever figures out what life is all about, and it doesn't matter. Explore the world. Nearly everything is really interesting if you go into it deeply enough."</p>
+      </div>
     </div>
 
 
@@ -584,7 +613,6 @@
     swal("Hello there!", "Welcome to the official website of Chrysopoeia Classes!");
 
     new WOW().init();
-
   </script>
 </body>
 
