--- a/index.html
+++ b/index.html
@@ -221,12 +221,14 @@
         </ul>
       </div>
       <div class="quote">
-        <img src="images/einstein.png" alt="einstein-pic">
-        <p>"Imagination is more important than knowledge."</p>
+        <img class="scientist-1" src="images/einstein.png" alt="einstein-pic">
+        <p class="quote-paragraph">"Imagination is more important than knowledge."</p>
+        <p>— Albert Einstein</p>
       </div>
       <div class="quote">
-        <img src="images/feynman.png" alt="feynman-pic">
-        <p>"Nobody ever figures out what life is all about, and it doesn't matter. Explore the world. Nearly everything is really interesting if you go into it deeply enough."</p>
+        <img class="scientist-2" src="images/feynman.png" alt="feynman-pic">
+        <p class="quote-paragraph">"Nobody ever figures out what life is all about, and it doesn't matter. Explore the world. Nearly everything is really interesting if you go into it deeply enough."</p>
+        <p>— Richard Feynman</p>
       </div>
     </div>
 
